# deepreach_openbound

./: .gitignore  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PRD.md  SECURITY.md  SRS.md  WINNING_STRATEGY.md
examples/vulnerable-app/nodejs/: app.js  package-lock.json
examples/vulnerable-app/python/: app.py  requirements.txt
src/deepreach/: __init__.py  __main__.py  cli.py  config.py  errors.py  hashing.py  init.py  log.py  main.py  models.py  timing.py
src/deepreach/lockfile_parser/: __init__.py  base.py  npm.py  pip.py
src/deepreach/reachability/: __init__.py  base.py  javascript.py  python_lang.py  typescript.py
src/deepreach/report/: __init__.py  explain.py  json_fmt.py  sarif.py  table.py
src/deepreach/vuln_federation/: __init__.py  base.py  ghsa.py  nvd.py  osv.py  store.py
tests/: test_explain_report.py  test_json_report.py  test_npm_parser.py  test_pip_parser.py  test_reachability.py  test_sarif_report.py  test_table_report.py  test_vuln_store.py
